--- a/src/assets/css/index_css.css
+++ b/src/assets/css/index_css.css
@@ -36,3 +36,30 @@
 .footer{
     padding-top: 2%;
 }
+
+.index {
+    padding: 0;
+}
+
+.foto {
+
+    width: 100%;
+    height: 90vh;
+    background-color: black;
+}
+
+.foto img {
+    width: 100%;
+    height: 90vh;
+    opacity: 30%;
+}
+
+.Logo {
+    width: 60px;
+    height: 30px;
+    padding-right: 5px;
+}
+
+.form_input {
+    width: 40%;
+}
