--- a/src/assets/css/index_css.css
+++ b/src/assets/css/index_css.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sofia+Sans+Semi+Condensed:wght@200&display=swap');
+
 .Element {
     padding-top: 0.5%;
     padding-left: 5%;
@@ -42,16 +45,19 @@
 }
 
 .foto {
-
-    width: 100%;
+    margin: 1%;
+    width: 98%;
     height: 90vh;
     background-color: black;
+    border-radius: 20px;
+    box-shadow: 5px 8px 12px black;
 }
 
 .foto img {
     width: 100%;
     height: 90vh;
     opacity: 30%;
+    border-radius: 20px;
 }
 
 .Logo {
@@ -62,4 +68,37 @@
 
 .form_input {
     width: 40%;
+}
+
+.foto .text {
+  font-family: 'Bungee', cursive;
+   font-size: 3rem;
+   color: white;
+   position:absolute ;
+   top: 30%;
+   left: 27.5%;
+   transform: translate(-50%, -50);
+   
+}
+
+.little-text {
+    font-family: 'Sofia Sans Semi Condensed', sans-serif;
+    padding-left: 21%;
+    font-size: 1.2rem;
+}
+
+.Litch img {
+    opacity: 100;
+    width: 20%;
+    height: 20%;
+    margin-left:27%;
+    border-radius: 120px;
+    border: 6px solid;
+    border-color:dimgray;
+}
+
+.Targets {
+    margin-left: 5%;
+    width: 100%;
+    height: 100vh;
 }
