--- a/src/assets/css/index_css.css
+++ b/src/assets/css/index_css.css
@@ -102,3 +102,22 @@
     width: 100%;
     height: 100vh;
 }
+
+.nameH {
+    margin-top: 5%;
+}
+
+.textH {
+    font-size: 20px;
+}
+
+.content {
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+}
+
+.CounterH {
+    width: 80%;
+    margin-left: 2%;
+    border-radius: 20px;
+}
