Changes forthird revision

--- a/src/assets/css/index_css.css
+++ b/src/assets/css/index_css.css
@@ -23,11 +23,30 @@
 }
 
 .card {
+  display: grid ;
+  grid-template-rows: 1fr 0.7fr ;
+  margin-bottom: 4%;
+}
+
+.cardAPI {
+  display: grid ;
+  width: 300px;
+  grid-template-rows: 1fr 0.7fr ;
+  margin-bottom: 4%;
+}
+
+.card-persoAPI {
   display: grid;
   grid-template-rows: 1fr 0.7fr;
   margin-bottom: 4%;
 }
 
+.PersonajesAPI {
+  width: 70%;
+  margin-left: 13%;
+  display: grid;
+  grid-template-columns: 2fr 2fr 2fr 2fr;
+}
 
 .Name {
     padding-top: 2%;
