--- a/src/assets/css/index_css.css
+++ b/src/assets/css/index_css.css
@@ -22,6 +22,11 @@
   object-fit: cover;
 }
 
+.imgcontentA > img{
+  height: 70vh;
+  object-fit: cover;
+}
+
 .card {
   display: grid ;
   grid-template-rows: 1fr 0.7fr ;
@@ -219,8 +224,35 @@ height: 100vh;
   margin-left: 10%;
 }
 
+/*Estilos para detalle*/
+
+.Detalle {
+  margin-left: 18%;
+  padding-top: 0.5%;
+  padding-left: 5%;
+  padding-right: 5%;
+  width: 100vh;
+  height: 125vh;
+}
 
 @media only screen and (max-width: 600px){
+  /*detalle*/
+
+  .Detalle {
+    margin-left: 3%;
+    width: 100%;
+    height: 100%;
+  }
+
+  /*API*/
+
+  .PersonajesAPI {
+    width: 70%;
+    margin-left: 6%;
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
   /*Estilos para index*/
   body {
     width: 100%;
@@ -348,10 +380,7 @@ height: 100vh;
       left: 2%;
   }
 
-  .vrt {
-    padding-left: 35%;
-    padding-bottom: 3%;
-  }
+
 
   /*Estilos para moments*/
 
