Register Characters Add

--- a/src/assets/css/index_css.css
+++ b/src/assets/css/index_css.css
@@ -59,6 +59,11 @@
     left: 2%;
 }
 
+.new-character {
+  margin-left: 74%;
+  margin-bottom: 1%;
+}
+
 /* Estilos para index*/
 .foto {
     margin: 1%;
