--- a/src/assets/css/index_css.css
+++ b/src/assets/css/index_css.css
@@ -1,7 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Sofia+Sans+Semi+Condensed:wght@200&display=swap');
 
- 
+body {
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+   /* Ajusta este valor según la altura de tu footer */
+}
 /*Estilos para personaje*/
 
 .Element {
@@ -23,7 +28,7 @@
 }
 
 .imgcontentA > img{
-  height: 70vh;
+  height: 100%;
   object-fit: cover;
 }
 
@@ -32,6 +37,11 @@
   grid-template-rows: 1fr 0.7fr ;
   margin-bottom: 4%;
 }
+
+.cardDetalle {
+  margin-bottom: 4%;
+}
+
 
 .cardAPI {
   display: grid ;
@@ -67,8 +77,6 @@
 /* Estilos para index*/
 .foto {
     margin: 1%;
-    width: 98%;
-    height: 90vh;
     background-color: black;
     border-radius: 20px;
     box-shadow: 5px 8px 12px black;
@@ -116,6 +124,13 @@
   border-color:dimgray;
 }
 
+.footer {
+  position: static;
+  bottom: 0;
+
+  width: 100%;
+  background-color: white;
+}
 
 .Synopsis {
   width: 100%;
@@ -237,13 +252,39 @@ height: 100vh;
 /*Estilos para detalle*/
 
 .Detalle {
-  margin-left: 18%;
   padding-top: 0.5%;
   padding-left: 5%;
   padding-right: 5%;
-  width: 100vh;
-  height: 125vh;
+  width: 200%;
+  height: 800px;
+  display: grid;
+  grid-template-columns: 900px 320px;
 }
+
+.Personality {
+  margin-top: 5%;
+  margin-left: 3%;
+}
+
+.right {
+  border: 2px solid;
+  margin-left: 10%;
+  list-style-type: none;
+}
+
+.right img{
+  width: 100%;
+}
+
+.right > div > ul {
+  list-style-type: none;
+  font-size: small;
+}
+
+.right > div {
+  padding: 10px;
+}
+
 
 @media only screen and (max-width: 600px){
   /*detalle*/
@@ -297,8 +338,6 @@ height: 100vh;
   }
   .Litch img {
     opacity: 100;
-    width: 60%;
-    height: 20%;
     margin-left:3%;
     margin-top: 2%;
     border-radius: 120px;
